--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-plumber": "~1.1.0",
     "event-stream": "~3.3.2",
     "gulp-watch": "~4.3.5",
-    "browser-sync": "~2.11.2"
+    "browser-sync": "~2.11.2",
+    "gulp-uglify": "~1.5.3",
+    "gulp-concat": "~2.6.0"
   }
 }
